--- a/main.html
+++ b/main.html
@@ -3,55 +3,62 @@
 <html>
 
 <head>
-	<title>Job App Form</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form id="my-form" method="post">
-		<div>
-			<label for="name">Name</label>
-			<input type="text" id="name" required>
-		</div>		
-		<div>
-			<label for="email">Email</label>
-			<input type="email" id="email" required>
-		</div>		
-		<div>
-			 <label for="gender_m">M</label>
-			  <input type="radio" id="gender_m" name="gender" required>
-			  <label for="gender">F</label>
-			  <input type="radio" id="gender_f" name="gender" required>
-		</div>		
-		<div>
-			<label for="laptop">Choose your laptop brand</label>
+
+	<form id="My Form" method="post">
+<dev>
+	<label for="name">1. Name</label>
+	<input type="date" id="name" placeholder="Name" required>
+		</dev>
+		<dev>
+	<label for="email">2. Email</label>
+	<input type="email" id="email" placeholder="Email" required >
+</dev>
+		<dev>
+	
+			<label for="gender">3. M</label>
+	<input type="radio" name="gender" placeholder="gender" required>
+	<label for="gender">F</label>
+	<input type="radio" name="gender" placeholder="gender" required>
+		</dev>
+		<dev>
+	<label for="laptop">4.Choose your Laptop</label>
 			  <select name="laptop" id="laptop" required>
-				  <option>Apple</option>
-				  <option>Asus</option>
-				  <option>HP</option>
-			  </select>
-		</div>
-		<div>
-			 <label for="age">Age:</label>
-			 <input type="number" id="age" min="0" required>
-		</div>
-		<div>
-			 <label for="portfolio">Portfolio</label>
-			 <input type="url" name="portfolio" id="portfolio">
-		</div>
-		<div>
-			<label for="dob">DOB</label>
-			<input type="date" id="dob" required>
-		</div>
-		<div>
-			 <label for="password">Password</label>
-			 <input type="password" id="password" required>
-		</div>
-		<div>
-			<button type="submit">Submit</button>
-		</div>
-  </form> 
+				  <option value="" disabled selected>--Please choose an option--</option>
+		<option value=""laptop">Apple</option>
+		<option value=""laptop">Asus</option>
+		<option value=""laptop">HP</option>
+	</select>
+			</dev>
+		<dev>
+	<label for="age">5. Age</label>
+	<input type="number" id="age" placeholder="Age" required>
+		</dev>
+			<dev>
+	<label for="portfolio">6. portfolio</label>
+	<input type="url" id="portfolio"	name="portfolio">
+	
+		</dev>
+		<dev>
+	<label for="dob">7. DOB</label>
+	<input type="date" id="dob" placeholder="DOB" required>
+		</dev>
+
+		<dev>
+	<label for="password">8. Password</label>
+	<input type="password" id="password" placeholder="Password" required>
+		</dev>
+	
+		<dev>
+	<label for="name">9. Sumit button</label>
+	<button type="submit" >Sumit</button>
+		</dev>
+
+</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
